<resources>
    <string name="app_name">Application</string>
    <string name="action_setting">Settings</string>
    <string name="movieTitle">Movie Title</string>
    <string name="movieDetails">Movie details</string>
    <string name="plot">Plot</string>
    <string name="rating">Rating</string>
    <string name="release">Release Dates</string>
    <string name="sortOrder">Sort Order</string>
    <string name="mostPopular">Most popular</string>
    <string name="highestRated">Highest rated</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV series</string>
    <string name="show_all">Show all</string>
    <string name="search_hint">Search...</string>
    <string name="browse_movies">Browse movies</string>
    <string name="people">People</string>
    <string name="recommended">Recommended</string>
    <string name="similar">Similar</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="profiles">Profiles</string>
    <string name="acting">Acting</string>
    <string name="creator">Creator</string>
    <string name="images">Images</string>
    <string name="release_date">Release date</string>
    <string name="first_air_date">First air date</string>
    <string name="last_air_date">Last air date</string>
    <string name="number_of_seasons">Number of seasons</string>
    <string name="number_of_episodes">Number of episodes</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="minutes">%1$s minutes</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="discover_movies_activity_title">Discover Movies</string>
    <string name="discover_TV_activity_title">Discover TV Series</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="coming_soon">Coming soon</string>
    <string name="now_playing">Now playing</string>
    <string name="popular_TV">Popular TV series</string>
    <string name="airing_today">Airing today</string>
    <string name="on_the_air">On the air</string>
    <string name="popular_people">Popular</string>
    <string name="select_genre">Select genre</string>
    <string name="release_from">Release date from </string>
    <string name="release_to">Release date to </string>
    <string name="featuring">Featuring </string>
    <string name="as">as </string>
    <string name="loading_more_items">Loading more items...</string>
    <string name="all">ALL</string>
    <string name="set">Set</string>
    <string name="runtimeGte">Duration shorter than: </string>
    <string name="runtimeLte">Duration greater than: </string>
    <string name="language">Language</string>
    <string name="not_set">Not set</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="language_activity">Select Language</string>

    <string name="english">English</string>
    <string name="german">German</string>
    <string name="arabic">Arabic</string>
    <string name="belorussian">Belorussian</string>
    <string name="bosnian">Bosnian</string>
    <string name="chinese">Chinese</string>
    <string name="corsican">Corsican</string>
    <string name="croatian">Croatian</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="finnish">Finnish</string>
    <string name="french">French</string>
    <string name="greek">Greek</string>
    <string name="hindi">Hindi</string>
    <string name="hungarian">Hungarian</string>
    <string name="indonesian">Indonesian</string>
    <string name="icelandic">Icelandic</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="norwegian">Norwegian</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="Slovak">Slovak</string>
    <string name="slovenian">Slovenian</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="polish">Polish</string>
    <string name="without_genre">Without genre</string>



</resources>
