<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FiltersActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/release_date_gte_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/release_from"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_date_gte_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/release_date_gte_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/release_date_lte_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/release_to"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_date_lte_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/release_date_lte_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/select_genres_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/select_genre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_genres_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/select_genres_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/without_genres_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/without_genre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/without_genres_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/without_genres_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/with_person_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/featuring"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/with_person_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/with_person_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/runtimeGte_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/runtimeGte"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runtimeGte_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/runtimeGte_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/runtimeLte_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/runtimeLte"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runtimeLte_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/runtimeLte_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:background="@color/colorPrimaryDark" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_toLeftOf="@+id/language_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"

                android:text="@string/language"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/language_value"
                android:text="@string/not_set"/>

        </LinearLayout>
        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:text="OK"
        android:id="@+id/button_ok"
        />
</LinearLayout>